--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   },
   "dependencies": {
     "@next/font": "^13.3.0",
+    "@react-google-maps/api": "^2.18.1",
+    "@ubilabs/google-maps-react-hooks": "^2.0.2",
     "boxicons": "^2.1.4",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
