--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "framer-motion": "^10.12.4",
+    "js-cookie": "^3.0.5",
     "next": "13.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
