--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "13.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swiper": "^9.3.1",
     "swr": "^2.1.3"
   },
   "devDependencies": {
