--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "next": "13.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^8.0.7",
+    "react-spinners": "^0.13.8",
     "swiper": "^9.3.1",
-    "swr": "^2.1.3"
+    "swr": "^2.1.5"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.3.0",
