--- a/package.json
+++ b/package.json
@@ -14,19 +14,26 @@
     "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@next/font": "^13.3.0",
     "@react-google-maps/api": "^2.18.1",
     "@ubilabs/google-maps-react-hooks": "^2.0.2",
+    "axios": "^1.4.0",
     "boxicons": "^2.1.4",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "framer-motion": "^10.12.4",
     "js-cookie": "^3.0.5",
     "next": "13.3.4",
+    "nodemailer": "^6.9.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-markdown": "^8.0.7",
+    "react-select": "^5.7.3",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3",
+    "react-widgets": "^5.8.4",
     "swiper": "^9.3.1",
     "swr": "^2.1.5"
   },
