--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@ubilabs/google-maps-react-hooks": "^2.0.2",
     "axios": "^1.4.0",
     "boxicons": "^2.1.4",
+    "cookie-cutter": "^0.2.0",
+    "cookies": "^0.8.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "framer-motion": "^10.12.4",
