--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     "boxicons": "^2.1.4",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
-    "framer-motion": "^10.12.4",
+    "framer-motion": "^10.12.16",
     "js-cookie": "^3.0.5",
     "next": "13.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-intersection-observer": "^9.4.4",
     "react-markdown": "^8.0.7",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
