--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,7 @@
 [build]
     command = "npm run build && npm run export && npm run postbuild"
     publish = "out"
+[[plugins]]
+    package = '@netlify/plugin-sitemap'
+        [plugins.inputs]
+        buildDir = "."
