--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@next/font": "^13.3.0",
     "@react-google-maps/api": "^2.18.1",
     "boxicons": "^2.1.4",
+    "date-fns": "^2.30.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "framer-motion": "^10.12.16",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
+    "markdown-it": "^13.0.1",
     "next": "13.3.4",
     "next-sitemap": "^4.1.3",
     "react": "18.2.0",
