--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,8 +1,7 @@
 {
   "compilerOptions": {
     "paths": {
-      "@/*": ["./src/*"],
-      "@/styles": ["./src/styles"]
+      "@/*": ["./src/*"]
     }
   }
 }
