--- a/package.json
+++ b/package.json
@@ -1,20 +1,18 @@
 {
-  "name": "front",
+  "name": "test-withour-ap-dir-rgm-web",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "export": "next export",
-    "lint:": "eslint \"**/*.{js,jsx}\"",
-    "lint:fix": "eslint \"**/*.{js,jsx}\" --fix",
-    "lint:scss": "npx stylelint \"**/*.scss\"",
-    "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
-    "postbuild": "next-sitemap --config next-sitemap.config.js"
+    "lint": "next lint"
   },
   "dependencies": {
+    "eslint-config-next": "13.4.7",
+    "next": "13.4.7",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "@emailjs/browser": "^3.11.0",
     "@next/bundle-analyzer": "^13.4.4",
     "@next/font": "^13.3.0",
@@ -22,14 +20,10 @@
     "boxicons": "^2.1.4",
     "date-fns": "^2.30.0",
     "eslint": "8.39.0",
-    "eslint-config-next": "13.3.4",
     "framer-motion": "^10.12.16",
     "js-cookie": "^3.0.5",
     "markdown-it": "^13.0.1",
-    "next": "13.3.4",
     "next-sitemap": "^4.1.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-intersection-observer": "^9.4.4",
     "react-markdown": "^8.0.7",
@@ -41,15 +35,14 @@
     "swr": "^2.1.5"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^13.3.0",
     "classnames": "^2.3.2",
-    "eslint": "^8.38.0",
+    "eslint": "^8.43.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "sass": "^1.62.1"
+    "sass": "^1.63.6"
   }
 }
