--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@hookform/resolvers": "^3.1.1",
     "@next/bundle-analyzer": "^13.4.4",
     "@next/font": "^13.3.0",
     "@react-google-maps/api": "^2.18.1",
@@ -30,7 +31,7 @@
     "next-sitemap": "^4.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.43.9",
+    "react-hook-form": "^7.45.2",
     "react-intersection-observer": "^9.4.4",
     "react-markdown": "^8.0.7",
     "react-spinners": "^0.13.8",
@@ -38,7 +39,8 @@
     "react-widgets": "^5.8.4",
     "sitemap": "^7.1.1",
     "swiper": "^9.3.1",
-    "swr": "^2.1.5"
+    "swr": "^2.1.5",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.3.0",
