--- a/package.json
+++ b/package.json
@@ -15,8 +15,6 @@
     "postbuild": "next-sitemap --config next-sitemap.config.js"
   },
   "dependencies": {
-    "eslint-config-next": "13.4.7",
-    "next": "13.4.7",
     "@emailjs/browser": "^3.11.0",
     "@hookform/resolvers": "^3.1.1",
     "@next/bundle-analyzer": "^13.4.4",
@@ -25,13 +23,16 @@
     "boxicons": "^2.1.4",
     "date-fns": "^2.30.0",
     "eslint": "8.39.0",
+    "eslint-config-next": "13.4.7",
     "framer-motion": "^10.12.16",
     "js-cookie": "^3.0.5",
     "markdown-it": "^13.0.1",
+    "next": "13.4.7",
     "next-sitemap": "^4.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.2",
+    "react-input-mask": "^2.0.4",
     "react-intersection-observer": "^9.4.4",
     "react-markdown": "^8.0.7",
     "react-spinners": "^0.13.8",
